pruebas con promedio funcionales, pendiente testear paciente

--- a/networks/besu_mod/1node-clique/networkconfig.json
+++ b/networks/besu_mod/1node-clique/networkconfig.json
@@ -15,8 +15,8 @@
         "contracts": {
             "promedio": {
                 "path": "/home/alonso/quickstart besu v2/caliper-benchmarks/src/ethereum/promedio/promedios.json",
-                "estimateGas": true,
-                "gas": 4700000 
+                "estimateGas": false,
+                "gas": 1000 
             }
         }
     }
