test funcionando con red externa

--- a/networks/ethereum_mod/1node-clique/networkconfig.json
+++ b/networks/ethereum_mod/1node-clique/networkconfig.json
@@ -1,6 +1,6 @@
 {
     "caliper": {
-        "blockchain": "ethereum"
+        "blockchain": "besu"
     },
     "ethereum": {
         "url": "ws://localhost:7545",
